# mi_tesis

./: pyproject.toml
lecturas/: README.md
quantum_embeddings/: README.md  prueba1.json  prueba2.json  run_random.py
quantum_embeddings/cecar/: cecar_main.sh  job_script_grid_search.sh
quantum_embeddings/datasets/FinRED/: extract_triplets_finred.py  tripletas_test.csv
quantum_embeddings/datasets/FinRED_component0/: head_count.csv
quantum_embeddings/evaluators/: link_prediction.py
quantum_embeddings/input_exps2/: FinRED_CU_R_MRL_ansatz1.json  FinRED_CU_R_MSE_ansatz1.json  FinRED_CU_R_MSE_ansatz2.json  FinRED_CU_R_MSE_ansatz4.json
quantum_embeddings/losses/: signed_MSE.py
quantum_embeddings/misc/: load_model.py
quantum_embeddings/quantum_knowledge_graph_embeddings/: quantum_loss.py  uniform_initializer.py
quantum_embeddings/remote_servers/: job_script.sh  main.sh
quantum_embeddings/results/prueba/: experiment_metadata.pkl
src/ansatz_library/: ansatz_ma.py  fully_entangled_ansatz.py
src/datasets/: dataset_handler.py
src/datasets/FinRED/: tripletas_FinRED.tsv  (+2 more)
src/grid_search/: exp_types.py  grid_search_runner.py  run_experiment.py
src/input_exps/: FinRED_CU_R_MRL_ansatz2.json  FinRED_CU_R_MRL_ansatz4.json  Kinships_CU_ma_RandomInit.json  Kinships_CU_ma_UniformInit.json  Kinships_R_ma_RandomInit.json  Kinships_R_ma_UniformInit.json  Kinships_clasicos.json
src/quantum_knowledge_graph_embeddings/: interaction.py  model.py  overlap_estimator.py
src/random_model/: random_interaction.py
src/remote_servers/: job_script_grid_search.sh
(+8 files in other folders)
